--- a/源码/vue-wymusic/package.json
+++ b/源码/vue-wymusic/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@better-scroll/core": "^2.0.0-beta.6",
+    "animate.css": "^3.7.2",
     "axios": "^0.19.2",
     "better-scroll": "^1.15.2",
     "js-base64": "^2.5.2",
